objects/IO_Category__c.object
<CustomObject>
    <fields>
        <fullName>Index__c</fullName>
        <description>Indice utilizado para la visualización del semáforo.</description>
        <label>Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>icon__c</fullName>
        <label>Ícono</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Categoría IO</label>
    <listViews>
        <fullName>Parametrizaci_n_de_umbrales</fullName>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>icon__c</columns>
        <filterScope>Everything</filterScope>
        <label>Parametrización de umbrales</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>IO Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categorías IO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>